[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/FourPlayerMap.gd" type="Script" id=1]
[ext_resource path="res://Scenes/main_map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ninja1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Ninja2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Ninja3.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Ninja4.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/flag.tscn" type="PackedScene" id=7]
[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=8]

[node name="Four Player Map" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Map" parent="." index="0" instance=ExtResource( 2 )]

[node name="Spawn1" type="Position2D" parent="Map" index="1"]

position = Vector2( 250, 200 )
_sections_unfolded = [ "Transform" ]

[node name="Ninja1" parent="Map/Spawn1" index="0" instance=ExtResource( 3 )]

[node name="Spawn2" type="Position2D" parent="Map" index="2"]

position = Vector2( 1250, 200 )
_sections_unfolded = [ "Transform" ]

[node name="Ninja2" parent="Map/Spawn2" index="0" instance=ExtResource( 4 )]

[node name="Spawn3" type="Position2D" parent="Map" index="3"]

position = Vector2( 250, 650 )
_sections_unfolded = [ "Transform" ]

[node name="Ninja3" parent="Map/Spawn3" index="0" instance=ExtResource( 5 )]

[node name="Spawn4" type="Position2D" parent="Map" index="4"]

position = Vector2( 1250, 650 )
_sections_unfolded = [ "Transform" ]

[node name="Ninja4" parent="Map/Spawn4" index="0" instance=ExtResource( 6 )]

[node name="Flag Spawn" type="Position2D" parent="Map" index="5"]

position = Vector2( 750, 425 )
_sections_unfolded = [ "Transform" ]

[node name="Flag" parent="Map/Flag Spawn" index="0" instance=ExtResource( 7 )]

[node name="GUI" parent="." index="1" instance=ExtResource( 8 )]

margin_left = 230.0
margin_top = 720.0
margin_right = 1209.0
margin_bottom = 768.0

[node name="VBoxContainer" parent="GUI" index="0"]

margin_right = 1023.0
margin_bottom = 146.0

[node name="Text" parent="GUI/VBoxContainer" index="0"]

margin_right = 1003.0
margin_bottom = 50.0

[node name="VBoxContainer" parent="GUI/VBoxContainer/Text" index="0"]

margin_left = 426.0
margin_top = 0.0
margin_right = 577.0
margin_bottom = 50.0

[node name="Scores" parent="GUI/VBoxContainer" index="1"]

margin_left = 201.0
margin_top = 54.0
margin_right = 801.0
margin_bottom = 126.0


[editable path="GUI"]
